# WorkspaceAlberta

./: .env.example  .gbrain-source  .gcloudignore  .gitignore  .mcp.json  .railwayignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  mcp-config.template.json  mcp.json.example  monthly-pain-point.md  opencode.json  owner-tools-list.md  package.json  railway.json  requirements.txt  server.json  subscribe.html  tsconfig.json
.claude/: settings.local.json
.cursor/: mcp.json
codespace-template/: README.md
demo-workspace/: my-problem.md
diagrams/: render-tikz.py
docs/: INTEGRATIONS.md  README.md  WorkspaceAlberta.md  architecture.md  authentication-and-multi-user-model.md  bid-room-operating-diagram.md  codespaces-as-a-service-research.md  codex-setup.md  deployment-egress-allowlist.md  deployment.md  e2b-bid-room-plan.md  getting-started.md  github-automation.md  imagery-sources.md  industry-tools-research.md  mcp-tool-reference.md  pricing-and-subscription.md  redesign-public-launch-brief.md  setup-productization-track.md  terminal-spec.md  tooling-roadmap.md  twitter-thread-last-mile.md  workspace-alberta-hermes-install.md  workspace-alberta-homepage-brand-design-spec.md  workspace-alberta-spec-research.md
e2b/: README.md  __init__.py  build_templates.py  orchestrator.py
env/: .env.example
frontend/: .gitignore  README.md  app.py  package-lock.json  package.json  railway.json
generated-problems/: complex-problem-001.md
generator/: README.md  __init__.py  add_smb_tools.py  catalog.json  codespace-generator.ts  codespace_generator.py  generator.py  generator.ts  profiles.py
installer/: install-workspace-alberta-pi.sh  workspace-alberta-kiosk.desktop  workspace-alberta-kiosk.sh
mcp-servers/canadabuys/: Dockerfile  Procfile  README.md  mcp_tools.py  pyproject.toml  railway.json  requirements.txt  server.py  server_http.py  server_sse.py
mcp_servers/: README.md  __init__.py
opera_core/: __init__.py  auth.py  catalog.py  client.py  config.py  mcp_tools.py  service.py  store.py
output/: README.md  deck-brief.md
procurement_core/: README.md  __init__.py  auth.py  billing.py  e2b_bid_room.py  extensions.py  service.py  storage.py
scripts/: cf_elbows_endpoint.sh  create-repo-from-template.ts  e2b_bid_room_smoke.py  wa.sh
tests/: README.md  test_canadabuys_mcp_smoke.py  test_cohere_alberta.py  test_e2b_bid_room.py  test_extensions.py  test_gate_and_billing.py  test_opera_analytics_smoke.py  test_opera_catalog.py  test_opera_client.py  test_opera_service.py  test_opera_store.py  test_procurement_http_app.py  test_production_hardening.py  test_search_relevance.py
wouldntitbegreatif/: index.html
(+311 files in other folders)
