[project]
name = "canadabuys-mcp"
version = "0.1.0"
description = "MCP server for CanadaBuys procurement search and bid triage"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WorkspaceAlberta" }
]
keywords = ["mcp", "canadabuys", "canada", "procurement", "contracts", "bids"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.23.0",
    "e2b>=2.21.1",
]

[project.urls]
Homepage = "https://github.com/your-org/canadabuys-mcp"
Repository = "https://github.com/your-org/canadabuys-mcp"

[project.scripts]
canadabuys-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
